Date fix with run

--- a/spark_hw_02.ipynb
+++ b/spark_hw_02.ipynb
@@ -21,13 +21,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uspOEcCkcIMV",
-        "outputId": "6cdb0a3f-b612-43b7-97fa-74919eddc33d"
+        "outputId": "470c2e21-7031-4e77-abac-dfb2457d5612"
       },
       "outputs": [
         {
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "j0ruZxEpb_NU"
       },
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "5N0WZl5CcirK"
       },
@@ -82,13 +82,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zToLcepLk1W_",
-        "outputId": "69c480e0-2f8b-497b-a680-83919f63af5b"
+        "outputId": "69677e35-6e1a-4089-e125-12f2fca3efa6"
       },
       "outputs": [
         {
@@ -115,11 +115,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "collapsed": true,
         "id": "KznBbveGqRkE",
-        "outputId": "54180146-787f-4ea7-af4a-005c7e7884f2",
+        "outputId": "e4a24ffe-1bf3-482f-d3a4-a7cd1edefb55",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -209,13 +209,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cM_q-1q0ktA5",
-        "outputId": "278b2a3e-a747-45b6-90b9-da5af130aeb3"
+        "outputId": "958a0a57-b55e-46bf-ee70-cd6295681da0"
       },
       "outputs": [
         {
@@ -226,7 +226,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 7
         }
       ],
       "source": [
@@ -235,24 +235,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "rZ7ylkrxk0Ix",
-        "outputId": "06d1b88d-3b70-4e6d-fc45-5d966008bb2a"
+        "outputId": "3fa5c689-592e-44ba-e661-2e22a4d21986"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "179"
+              "202"
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 8
         }
       ],
       "source": [
@@ -270,38 +270,38 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XU7fLrXiWwaw",
-        "outputId": "a1e522ca-3370-443b-d3ce-b393da9c5344"
+        "outputId": "d2eddd59-c0a9-4b75-ba14-0e11ba3db0ba"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+--------+--------------+----------+---------+\n",
-            "|iso_code|      location|      date|new_cases|\n",
-            "+--------+--------------+----------+---------+\n",
-            "|     USA| United States|2020-03-31|  26314.0|\n",
-            "|     ESP|         Spain|2020-03-31|   7967.0|\n",
-            "|     FRA|        France|2020-03-31|   7629.0|\n",
-            "|     DEU|       Germany|2020-03-31|   4923.0|\n",
-            "|     GBR|United Kingdom|2020-03-31|   4534.0|\n",
-            "|     ITA|         Italy|2020-03-31|   4053.0|\n",
-            "|     IRN|          Iran|2020-03-31|   3110.0|\n",
-            "|     TUR|        Turkey|2020-03-31|   2704.0|\n",
-            "|     BRA|        Brazil|2020-03-31|   1138.0|\n",
-            "|     CAN|        Canada|2020-03-31|   1129.0|\n",
-            "|     PRT|      Portugal|2020-03-31|   1035.0|\n",
-            "|     BEL|       Belgium|2020-03-31|    876.0|\n",
-            "|     NLD|   Netherlands|2020-03-31|    850.0|\n",
-            "|     ISR|        Israel|2020-03-31|    738.0|\n",
-            "|     CHE|   Switzerland|2020-03-31|    683.0|\n",
-            "|     AUT|       Austria|2020-03-31|    562.0|\n",
-            "|     PHL|   Philippines|2020-03-31|    538.0|\n",
-            "|     RUS|        Russia|2020-03-31|    501.0|\n",
-            "|     SWE|        Sweden|2020-03-31|    475.0|\n",
-            "|     IRL|       Ireland|2020-03-31|    325.0|\n",
-            "+--------+--------------+----------+---------+\n",
+            "+--------+-------------+----------+---------+\n",
+            "|iso_code|     location|      date|new_cases|\n",
+            "+--------+-------------+----------+---------+\n",
+            "|     BRA|       Brazil|2021-03-31|  90638.0|\n",
+            "|     IND|        India|2021-03-31|  72330.0|\n",
+            "|     USA|United States|2021-03-31|  67039.0|\n",
+            "|     FRA|       France|2021-03-31|  59054.0|\n",
+            "|     TUR|       Turkey|2021-03-31|  39302.0|\n",
+            "|     POL|       Poland|2021-03-31|  32891.0|\n",
+            "|     DEU|      Germany|2021-03-31|  25014.0|\n",
+            "|     ITA|        Italy|2021-03-31|  23887.0|\n",
+            "|     ARG|    Argentina|2021-03-31|  16056.0|\n",
+            "|     PER|         Peru|2021-03-31|  15686.0|\n",
+            "|     UKR|      Ukraine|2021-03-31|  11345.0|\n",
+            "|     IRN|         Iran|2021-03-31|  10330.0|\n",
+            "|     CAN|       Canada|2021-03-31|   8728.0|\n",
+            "|     CZE|      Czechia|2021-03-31|   8664.0|\n",
+            "|     COL|     Colombia|2021-03-31|   8646.0|\n",
+            "|     ESP|        Spain|2021-03-31|   8534.0|\n",
+            "|     SWE|       Sweden|2021-03-31|   8441.0|\n",
+            "|     NLD|  Netherlands|2021-03-31|   8221.0|\n",
+            "|     RUS|       Russia|2021-03-31|   8156.0|\n",
+            "|     HUN|      Hungary|2021-03-31|   6700.0|\n",
+            "+--------+-------------+----------+---------+\n",
             "only showing top 20 rows\n",
             "\n"
           ]
@@ -325,7 +325,7 @@
       "metadata": {
         "id": "8A_AmX1hLKhz"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -338,9 +338,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "69LYgjPfMhHA",
-        "outputId": "77b98393-e388-4886-e1ee-cedab5b502e3"
+        "outputId": "7104c092-73a3-4d13-cc2c-1c1e14eca34a"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,21 +349,21 @@
             "+--------+--------------+-------------+-----------+\n",
             "|iso_code|      location|   population|total_cases|\n",
             "+--------+--------------+-------------+-----------+\n",
-            "|     USA| United States| 3.31002647E8|   192301.0|\n",
-            "|     ITA|         Italy|  6.0461828E7|   105792.0|\n",
-            "|     ESP|         Spain|  4.6754783E7|    95923.0|\n",
-            "|     CHN|         China|1.439323774E9|    82279.0|\n",
-            "|     DEU|       Germany|  8.3783945E7|    71808.0|\n",
-            "|     FRA|        France|  6.8147687E7|    52278.0|\n",
-            "|     IRN|          Iran|  8.3992953E7|    44605.0|\n",
-            "|     GBR|United Kingdom|  6.7886004E7|    38815.0|\n",
-            "|     CHE|   Switzerland|    8654618.0|    16605.0|\n",
-            "|     TUR|        Turkey|  8.4339067E7|    13531.0|\n",
-            "|     BEL|       Belgium|  1.1589616E7|    12775.0|\n",
-            "|     NLD|   Netherlands|  1.7134873E7|    12667.0|\n",
-            "|     AUT|       Austria|    9006400.0|    10180.0|\n",
-            "|     KOR|   South Korea|  5.1269183E7|     9786.0|\n",
-            "|     CAN|        Canada|  3.7742157E7|     8527.0|\n",
+            "|     USA| United States| 3.31002647E8| 3.046221E7|\n",
+            "|     BRA|        Brazil| 2.12559409E8|1.2748747E7|\n",
+            "|     IND|         India|1.380004385E9|1.2221665E7|\n",
+            "|     FRA|        France|  6.8147687E7|  4705068.0|\n",
+            "|     RUS|        Russia|  1.4593446E8|  4494234.0|\n",
+            "|     GBR|United Kingdom|  6.7886004E7|  4359982.0|\n",
+            "|     ITA|         Italy|  6.0461828E7|  3584899.0|\n",
+            "|     TUR|        Turkey|  8.4339067E7|  3317182.0|\n",
+            "|     ESP|         Spain|  4.6754783E7|  3284353.0|\n",
+            "|     DEU|       Germany|  8.3783945E7|  2843644.0|\n",
+            "|     COL|      Colombia|  5.0882884E7|  2406377.0|\n",
+            "|     ARG|     Argentina|  4.5195777E7|  2348821.0|\n",
+            "|     POL|        Poland|  3.7846605E7|  2321717.0|\n",
+            "|     MEX|        Mexico| 1.28932753E8|  2238887.0|\n",
+            "|     IRN|          Iran|  8.3992953E7|  1885564.0|\n",
             "+--------+--------------+-------------+-----------+\n",
             "\n"
           ]
@@ -372,7 +372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "fTG8asy1xpvk"
       },
@@ -383,38 +383,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ex-HrY6wzJpk",
-        "outputId": "6ad5371c-22bb-471d-a6c0-6fa47ed1af2b"
+        "outputId": "a696614d-023b-4986-d967-9619b9486788"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+--------+--------------+--------------------+\n",
-            "|iso_code|      location|       cases_percent|\n",
-            "+--------+--------------+--------------------+\n",
-            "|     ESP|         Spain| 0.20516189755388234|\n",
-            "|     CHE|   Switzerland| 0.19186288753587968|\n",
-            "|     ITA|         Italy|  0.1749732078891164|\n",
-            "|     AUT|       Austria| 0.11303073370047965|\n",
-            "|     BEL|       Belgium| 0.11022798339479065|\n",
-            "|     DEU|       Germany| 0.08570615766540952|\n",
-            "|     FRA|        France| 0.07671280171255115|\n",
-            "|     NLD|   Netherlands| 0.07392526340872209|\n",
-            "|     USA| United States|0.058096514255367875|\n",
-            "|     GBR|United Kingdom| 0.05717673410265833|\n",
-            "|     IRN|          Iran|0.053105645660535356|\n",
-            "|     CAN|        Canada|0.022592773380705294|\n",
-            "|     KOR|   South Korea|0.019087489652409712|\n",
-            "|     TUR|        Turkey|0.016043573258878948|\n",
-            "|     CHN|         China|0.005716503922626098|\n",
-            "+--------+--------------+--------------------+\n",
+            "+--------+--------------+------------------+\n",
+            "|iso_code|      location|     cases_percent|\n",
+            "+--------+--------------+------------------+\n",
+            "|     USA| United States| 9.203010995860707|\n",
+            "|     ESP|         Spain|  7.02463531912874|\n",
+            "|     FRA|        France| 6.904222589388837|\n",
+            "|     GBR|United Kingdom| 6.422504998232037|\n",
+            "|     POL|        Poland| 6.134544961166266|\n",
+            "|     BRA|        Brazil| 5.997733555986693|\n",
+            "|     ITA|         Italy| 5.929193870883295|\n",
+            "|     ARG|     Argentina|  5.19699218800907|\n",
+            "|     COL|      Colombia| 4.729246479032124|\n",
+            "|     TUR|        Turkey|3.9331499837435953|\n",
+            "|     DEU|       Germany| 3.394020178925688|\n",
+            "|     RUS|        Russia|  3.07962492203692|\n",
+            "|     IRN|          Iran| 2.244907379313119|\n",
+            "|     MEX|        Mexico|1.7364765336236945|\n",
+            "|     IND|         India|0.8856250844449309|\n",
+            "+--------+--------------+------------------+\n",
             "\n"
           ]
         }
@@ -434,7 +434,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "Btsu8tYXRzCW"
       },
@@ -446,13 +446,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "jal4_J8PHMVv",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7006390f-79f8-4e94-c072-e5b425c922e4"
+        "outputId": "d29865a5-0abf-45fd-80d0-083f04e91b3b"
       },
       "outputs": [
         {
@@ -463,7 +463,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 15
         }
       ],
       "source": [
@@ -492,9 +492,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5SJvP5yWdIfa",
-        "outputId": "ddc50528-ddf1-471d-f285-5e14ac82ac3e"
+        "outputId": "86e507cc-bbf8-498e-bab4-e1a3a7419685"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -531,13 +531,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DdpEgTcIQVEo",
-        "outputId": "cdb2ba7f-29c3-427e-9f59-6bb2e7d5efb4"
+        "outputId": "f91f1331-96fd-439a-d3d8-2e4ec0928124"
       },
       "outputs": [
         {
@@ -566,13 +566,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "syjSRahEQXkh",
-        "outputId": "a2bc82b3-5246-4768-b980-5ce6d170c96f"
+        "outputId": "e1552351-fddd-4856-f4a1-9db403634df6"
       },
       "outputs": [
         {
@@ -601,13 +601,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7jrlRPaPQaH4",
-        "outputId": "1d5de440-2a61-49b0-fff4-c3b7c831461b"
+        "outputId": "8309b7f9-dd94-40aa-dc8b-9825e3ad476e"
       },
       "outputs": [
         {
@@ -636,13 +636,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-ToqgNBtQfEB",
-        "outputId": "355a8aa0-b1cc-47ed-f248-43f98448577d"
+        "outputId": "f311150f-3f4e-4a0e-d7c2-bdcf467b5ed4"
       },
       "outputs": [
         {
